AritmeticaParser.py
# Generated from Aritmetica.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AritmeticaParser ( Parser ):

    grammarFileName = "Aritmetica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.intersection('", "')'", "'set['", "'..'", 
                     "']'", "'.merge('", "'.return_diff('", "'.complement('", 
                     "'.includes('", "'.sum()'", "'.avg()'", "'.length()'", 
                     "'printf('", "'='", "'if'", "'then '", "'else '", "'fi'", 
                     "'while'", "'do'", "'done'", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "AND_OPERATOR", 
                      "OR_OPERATOR", "COMPARATION_OPERATOR", "VARNAME", 
                      "NUMBER", "DIGIT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_setMathematicsManager = 2
    RULE_getIntersection = 3
    RULE_setNumber = 4
    RULE_setMerge = 5
    RULE_setDifference = 6
    RULE_setComplement = 7
    RULE_setBelongs = 8
    RULE_setSum = 9
    RULE_setAverage = 10
    RULE_setLength = 11
    RULE_setPrint = 12
    RULE_assignStatement = 13
    RULE_ifStatement = 14
    RULE_whileStatement = 15
    RULE_booleanExpression = 16
    RULE_operand = 17
    RULE_expression = 18
    RULE_term = 19
    RULE_factor = 20

    ruleNames =  [ "program", "statement", "setMathematicsManager", "getIntersection", 
                   "setNumber", "setMerge", "setDifference", "setComplement", 
                   "setBelongs", "setSum", "setAverage", "setLength", "setPrint", 
                   "assignStatement", "ifStatement", "whileStatement", "booleanExpression", 
                   "operand", "expression", "term", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    AND_OPERATOR=27
    OR_OPERATOR=28
    COMPARATION_OPERATOR=29
    VARNAME=30
    NUMBER=31
    DIGIT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AritmeticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AritmeticaParser.StatementContext,i)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = AritmeticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AritmeticaParser.T__2) | (1 << AritmeticaParser.T__12) | (1 << AritmeticaParser.T__14) | (1 << AritmeticaParser.T__18) | (1 << AritmeticaParser.T__25) | (1 << AritmeticaParser.VARNAME) | (1 << AritmeticaParser.NUMBER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AritmeticaParser.ExpressionContext,0)


        def assignStatement(self):
            return self.getTypedRuleContext(AritmeticaParser.AssignStatementContext,0)


        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(AritmeticaParser.BooleanExpressionContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(AritmeticaParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(AritmeticaParser.WhileStatementContext,0)


        def setNumber(self):
            return self.getTypedRuleContext(AritmeticaParser.SetNumberContext,0)


        def setMathematicsManager(self):
            return self.getTypedRuleContext(AritmeticaParser.SetMathematicsManagerContext,0)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = AritmeticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.assignStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.match(AritmeticaParser.VARNAME)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.booleanExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.ifStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.whileStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                self.setNumber()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 54
                self.setMathematicsManager()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetMathematicsManagerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getIntersection(self):
            return self.getTypedRuleContext(AritmeticaParser.GetIntersectionContext,0)


        def setMerge(self):
            return self.getTypedRuleContext(AritmeticaParser.SetMergeContext,0)


        def setDifference(self):
            return self.getTypedRuleContext(AritmeticaParser.SetDifferenceContext,0)


        def setComplement(self):
            return self.getTypedRuleContext(AritmeticaParser.SetComplementContext,0)


        def setBelongs(self):
            return self.getTypedRuleContext(AritmeticaParser.SetBelongsContext,0)


        def setSum(self):
            return self.getTypedRuleContext(AritmeticaParser.SetSumContext,0)


        def setAverage(self):
            return self.getTypedRuleContext(AritmeticaParser.SetAverageContext,0)


        def setLength(self):
            return self.getTypedRuleContext(AritmeticaParser.SetLengthContext,0)


        def setPrint(self):
            return self.getTypedRuleContext(AritmeticaParser.SetPrintContext,0)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_setMathematicsManager

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetMathematicsManager" ):
                listener.enterSetMathematicsManager(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetMathematicsManager" ):
                listener.exitSetMathematicsManager(self)




    def setMathematicsManager(self):

        localctx = AritmeticaParser.SetMathematicsManagerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setMathematicsManager)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.getIntersection()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.setMerge()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.setDifference()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.setComplement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.setBelongs()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.setSum()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.setAverage()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 64
                self.setLength()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 65
                self.setPrint()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetIntersectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstSet = None # Token
            self.secondSet = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(AritmeticaParser.VARNAME)
            else:
                return self.getToken(AritmeticaParser.VARNAME, i)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_getIntersection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetIntersection" ):
                listener.enterGetIntersection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetIntersection" ):
                listener.exitGetIntersection(self)




    def getIntersection(self):

        localctx = AritmeticaParser.GetIntersectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_getIntersection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            localctx.firstSet = self.match(AritmeticaParser.VARNAME)
            self.state = 69
            self.match(AritmeticaParser.T__0)
            self.state = 70
            localctx.secondSet = self.match(AritmeticaParser.VARNAME)
            self.state = 71
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetNumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.numberStart = None # Token
            self.numberEnd = None # Token

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(AritmeticaParser.NUMBER)
            else:
                return self.getToken(AritmeticaParser.NUMBER, i)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetNumber" ):
                listener.enterSetNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetNumber" ):
                listener.exitSetNumber(self)




    def setNumber(self):

        localctx = AritmeticaParser.SetNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_setNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(AritmeticaParser.T__2)
            self.state = 74
            localctx.numberStart = self.match(AritmeticaParser.NUMBER)
            self.state = 75
            self.match(AritmeticaParser.T__3)
            self.state = 76
            localctx.numberEnd = self.match(AritmeticaParser.NUMBER)
            self.state = 77
            self.match(AritmeticaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetMergeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token
            self.secondVarName = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(AritmeticaParser.VARNAME)
            else:
                return self.getToken(AritmeticaParser.VARNAME, i)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setMerge

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetMerge" ):
                listener.enterSetMerge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetMerge" ):
                listener.exitSetMerge(self)




    def setMerge(self):

        localctx = AritmeticaParser.SetMergeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setMerge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 80
            self.match(AritmeticaParser.T__5)
            self.state = 81
            localctx.secondVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 82
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetDifferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token
            self.secondVarName = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(AritmeticaParser.VARNAME)
            else:
                return self.getToken(AritmeticaParser.VARNAME, i)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setDifference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetDifference" ):
                listener.enterSetDifference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetDifference" ):
                listener.exitSetDifference(self)




    def setDifference(self):

        localctx = AritmeticaParser.SetDifferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_setDifference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 85
            self.match(AritmeticaParser.T__6)
            self.state = 86
            localctx.secondVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 87
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetComplementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token
            self.secondVarName = None # Token

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(AritmeticaParser.VARNAME)
            else:
                return self.getToken(AritmeticaParser.VARNAME, i)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setComplement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetComplement" ):
                listener.enterSetComplement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetComplement" ):
                listener.exitSetComplement(self)




    def setComplement(self):

        localctx = AritmeticaParser.SetComplementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_setComplement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 90
            self.match(AritmeticaParser.T__7)
            self.state = 91
            localctx.secondVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 92
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetBelongsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token
            self.element = None # Token

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def NUMBER(self):
            return self.getToken(AritmeticaParser.NUMBER, 0)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setBelongs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetBelongs" ):
                listener.enterSetBelongs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetBelongs" ):
                listener.exitSetBelongs(self)




    def setBelongs(self):

        localctx = AritmeticaParser.SetBelongsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_setBelongs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 95
            self.match(AritmeticaParser.T__8)
            self.state = 96
            localctx.element = self.match(AritmeticaParser.NUMBER)
            self.state = 97
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetSumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setSum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetSum" ):
                listener.enterSetSum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetSum" ):
                listener.exitSetSum(self)




    def setSum(self):

        localctx = AritmeticaParser.SetSumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_setSum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 100
            self.match(AritmeticaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetAverageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setAverage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetAverage" ):
                listener.enterSetAverage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetAverage" ):
                listener.exitSetAverage(self)




    def setAverage(self):

        localctx = AritmeticaParser.SetAverageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_setAverage)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 103
            self.match(AritmeticaParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetLengthContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setLength

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetLength" ):
                listener.enterSetLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetLength" ):
                listener.exitSetLength(self)




    def setLength(self):

        localctx = AritmeticaParser.SetLengthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_setLength)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 106
            self.match(AritmeticaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetPrintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.firstVarName = None # Token

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def getRuleIndex(self):
            return AritmeticaParser.RULE_setPrint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetPrint" ):
                listener.enterSetPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetPrint" ):
                listener.exitSetPrint(self)




    def setPrint(self):

        localctx = AritmeticaParser.SetPrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_setPrint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(AritmeticaParser.T__12)
            self.state = 109
            localctx.firstVarName = self.match(AritmeticaParser.VARNAME)
            self.state = 110
            self.match(AritmeticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(AritmeticaParser.VARNAME, 0)

        def expression(self):
            return self.getTypedRuleContext(AritmeticaParser.ExpressionContext,0)


        def setMathematicsManager(self):
            return self.getTypedRuleContext(AritmeticaParser.SetMathematicsManagerContext,0)


        def setNumber(self):
            return self.getTypedRuleContext(AritmeticaParser.SetNumberContext,0)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_assignStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatement" ):
                listener.enterAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatement" ):
                listener.exitAssignStatement(self)




    def assignStatement(self):

        localctx = AritmeticaParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignStatement)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(AritmeticaParser.VARNAME)
                self.state = 113
                self.match(AritmeticaParser.T__13)
                self.state = 114
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(AritmeticaParser.VARNAME)
                self.state = 116
                self.match(AritmeticaParser.T__13)
                self.state = 117
                self.setMathematicsManager()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.match(AritmeticaParser.VARNAME)
                self.state = 119
                self.match(AritmeticaParser.T__13)
                self.state = 120
                self.setNumber()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpression(self):
            return self.getTypedRuleContext(AritmeticaParser.BooleanExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AritmeticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AritmeticaParser.StatementContext,i)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = AritmeticaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AritmeticaParser.T__14)
            self.state = 124
            self.booleanExpression(0)
            self.state = 125
            self.match(AritmeticaParser.T__15)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.statement()
                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AritmeticaParser.T__2) | (1 << AritmeticaParser.T__12) | (1 << AritmeticaParser.T__14) | (1 << AritmeticaParser.T__18) | (1 << AritmeticaParser.T__25) | (1 << AritmeticaParser.VARNAME) | (1 << AritmeticaParser.NUMBER))) != 0)):
                    break

            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AritmeticaParser.T__16:
                self.state = 131
                self.match(AritmeticaParser.T__16)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 132
                    self.statement()
                    self.state = 135 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AritmeticaParser.T__2) | (1 << AritmeticaParser.T__12) | (1 << AritmeticaParser.T__14) | (1 << AritmeticaParser.T__18) | (1 << AritmeticaParser.T__25) | (1 << AritmeticaParser.VARNAME) | (1 << AritmeticaParser.NUMBER))) != 0)):
                        break



            self.state = 139
            self.match(AritmeticaParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpression(self):
            return self.getTypedRuleContext(AritmeticaParser.BooleanExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AritmeticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AritmeticaParser.StatementContext,i)


        def getRuleIndex(self):
            return AritmeticaParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):
